104 ==> 334604 - Crash after changing disk partions.
105 ==> 351689 - Crash on opening digiKam.
106 ==> 149267 - digiKam crashes after finding avi and so on.
107 ==> 170387 - Add movies management.
108 ==> 369629 - digiKam does not use GPS data from video files.
109 ==> 367880 - Nexus 5X videos show up upside-down in digiKam.
110 ==> 330116 - digiKam does not take care about GPS info stored in MP4 video files.
111 ==> 339150 - digikam crashes when trying to display video file.
112 ==> 344406 - Crash at start.
113 ==> 339909 - digiKam Segmentation Fault on open.
114 ==> 343231 - Crash at scanning for new fotos.
115 ==> 340373 - Crash on scanning video directory.
116 ==> 134679 - Video and audio files are not imported.
117 ==> 375357 - No video preview.
118 ==> 261773 - Batch renaming does not complete when MP4 video file is processed.
119 ==> 185915 - Album View: "Created" time of video set to "00:00".
120 ==> 303218 - digiKam import crashes when you select video files.
121 ==> 374241 - Bad video date rename.
122 ==> 375646 - Be able to scan only photo, not video and audio.
123 ==> 262499 - Cannot rename .AVI files.
124 ==> 199261 - Import avi movies from sdcard wrong date and no thumbnail.
125 ==> 181521 - NEF's in descending order, AVI in ascending order in import from SD-card.
126 ==> 392019 - Two persons can point to the same face tag in pictures.
127 ==> 392013 - Metadata explorer does not show XMP face rectangles.
128 ==> 389508 - Dates Side Menu Is Not Updated Automatically After Exif Date Change [patch].
129 ==> 331864 - Merge Tags with same name when moving to same hierarchy level.
130 ==> 347302 - Reassign name to face.
131 ==> 391747 - BQM Tool "Remove Metadata" doesn't remove all metadata from image.
132 ==> 285683 - Already imported pictures not recognized after daylight savings time.
133 ==> 392309 - Icons are pixelated when my display scale factor is 1.2
134 ==> 392405 - Function 'getImageIdsFromArea' argument order different.
135 ==> 