@@ -427,9 +427,9 @@ void AlbumModelTest::cleanup()
     // remove all tags
 
     QString error;
-    bool removed = AlbumManager::instance()->deleteTAlbum(talbumRoot0, error);
+    bool removed = AlbumManager::instance()->deleteTAlbum(talbumRoot0, error, false);
     QVERIFY2(removed, QString::fromUtf8("Error removing a tag: %1").arg(error).toLatin1().constData());
-    removed      = AlbumManager::instance()->deleteTAlbum(talbumRoot1, error);
+    removed      = AlbumManager::instance()->deleteTAlbum(talbumRoot1, error, false);
     QVERIFY2(removed, QString::fromUtf8("Error removing a tag: %1").arg(error).toLatin1().constData());
 
     QCOMPARE(AlbumManager::instance()->allTAlbums().size(), 1);
